gcp/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-movie-service
  namespace: nasir
  labels:
    app: react-movie
spec:
  selector:
    app: react-movie 
  ports:
    - protocol: TCP
      port: 80 
      targetPort: 8000 
  type: LoadBalancer
